@@ -24,6 +24,9 @@
 				<arg><option>--daemon</option></arg>
 			</group>
 			<group choice='opt'>
+				<arg><option>-i</option> <replaceable>interface<group choice='opt'>:port</group></replaceable></arg>
+			</group>
+			<group choice='opt'>
 				<arg><option>-p</option> <replaceable>port number</replaceable></arg>
 			</group>
 		</cmdsynopsis>
@@ -53,10 +56,23 @@
 				</listitem>
 			</varlistentry>
 			<varlistentry>
+				<term><option>-i</option></term>
+				<term><option>--interface</option></term>
+				<listitem>
+					<para>Listen for incoming network connections on the
+					specified interface only. The port to listen to can be
+					changed from the default by appending it to the interface
+					name, e.g. eth0:1884. This is useful to restrict access to
+					certain network interfaces. To restrict access to mosquitto
+					to the local host only, use "--interface lo". This option
+					may be specified multiple times.</para>
+				</listitem>
+			</varlistentry>
+			<varlistentry>
 				<term><option>-p</option></term>
 				<term><option>--port</option></term>
 				<listitem>
-					<para>Listen on the port specified instead of the default 1883. This acts in addition to the port setting in the config file. May be specified multiple times to open multiple sockets listening on different ports.</para>
+					<para>Listen on the port specified instead of the default 1883. This acts in addition to the port setting in the config file. May be specified multiple times to open multiple sockets listening on different ports. This socket will be bound to all network interfaces.</para>
 				</listitem>
 			</varlistentry>
 		</variablelist>
@@ -69,7 +85,6 @@
 			<listitem><para>There is no bridge support.</para></listitem>
 			<listitem><para>Wildcards within subscription requests are not supported.</para></listitem>
 			<listitem><para>There are vastly fewer configuration options.</para></listitem>
-			<listitem><para>Only binding to a single port is possible, and it's not possible to bind to a specific address.</para></listitem>
 			<listitem><para>There is no logging information.</para></listitem>
 			<listitem><para>The $SYS hierarchy is smaller.</para></listitem>
 			<listitem><para>It isn't as well tested or documented...</para></listitem>
