@@ -5,6 +5,11 @@
 #
 # Default values are shown, uncomment to change.
 
+# Network interface to bind to, e.g. eth0
+# Optionally specify a port number if not using the default 1883.
+# For example "interface eth0:1834"
+#interface
+
 # Port to bind to.
 # This option may be repeated to make mosquitto listen on multiple ports.
 #port 1883
