@@ -22,6 +22,7 @@ int mqtt3_config_parse_args(mqtt3_config *config, int argc, char *argv[])
 {
 	int i;
 	int port_tmp;
+	char *str;
 
 	for(i=1; i<argc; i++){
 		if(!strcmp(argv[i], "-c") || !strcmp(argv[i], "--config-file")){
@@ -37,6 +38,34 @@ int mqtt3_config_parse_args(mqtt3_config *config, int argc, char *argv[])
 			i++;
 		}else if(!strcmp(argv[i], "-d") || !strcmp(argv[i], "--daemon")){
 			config->daemon = 1;
+		}else if(!strcmp(argv[i], "-i") || !strcmp(argv[i], "--interface")){
+			if(i<argc-1){
+				i++;
+				str = strtok(argv[i], ":");
+				if(str){
+					config->iface_count++;
+					config->iface = mqtt3_realloc(config->iface, sizeof(struct mqtt3_iface)*config->iface_count);
+					if(!config->iface){
+						fprintf(stderr, "Error: Out of memory.\n");
+						return 1;
+					}
+					config->iface[config->iface_count-1].iface = mqtt3_strdup(str);
+					str = strtok(NULL, ":");
+					if(str){
+						port_tmp = atoi(str);
+						if(port_tmp < 1 || port_tmp > 65535){
+							fprintf(stderr, "Error: Invalid port value (%d).\n", port_tmp);
+							return 1;
+						}
+						config->iface[config->iface_count-1].port = port_tmp;
+					}else{
+						config->iface[config->iface_count-1].port = 1883;
+					}
+				}
+			}else{
+				fprintf(stderr, "Error: -i argument given, but no interface specifed.\n");
+				return 1;
+			}
 		}else if(!strcmp(argv[i], "-p") || !strcmp(argv[i], "--port")){
 			if(i<argc-1){
 				port_tmp = atoi(argv[i+1]);
@@ -87,7 +116,35 @@ int mqtt3_config_read(mqtt3_config *config, const char *filename)
 				while(token[strlen(token)-1] == 10 || token[strlen(token)-1] == 13){
 					token[strlen(token)-1] = 0;
 				}
-				if(!strcmp(token, "msg_timeout")){
+
+				if(!strcmp(token, "interface")){
+					token = strtok(NULL, " ");
+					if(token){
+						token = strtok(token, ":");
+						if(token){
+							config->iface_count++;
+							config->iface = mqtt3_realloc(config->iface, sizeof(struct mqtt3_iface)*config->iface_count);
+							if(!config->iface){
+								fprintf(stderr, "Error: Out of memory.\n");
+								return 1;
+							}
+							config->iface[config->iface_count-1].iface = mqtt3_strdup(token);
+							token = strtok(NULL, ":");
+							if(token){
+								port_tmp = atoi(token);
+								if(port_tmp < 1 || port_tmp > 65535){
+									fprintf(stderr, "Error: Invalid port value (%d).\n", port_tmp);
+									return 1;
+								}
+								config->iface[config->iface_count-1].port = port_tmp;
+							}else{
+								config->iface[config->iface_count-1].port = 1883;
+							}
+						}
+					}else{
+						fprintf(stderr, "Warning: Empty interface value in configuration.\n");
+					}
+				}else if(!strcmp(token, "msg_timeout")){
 					token = strtok(NULL, " ");
 					if(token){
 						config->msg_timeout = atoi(token);
